--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -24,7 +24,7 @@ en:
   categories:
     games: Jeux vidéo
     music: Musique
-    annonces: Annonces
+    annonces: Société
     development: Développement  
     movies : Films et séries
     reading: Lectures
